--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,18 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      Ionic Web3 Blank
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
+  <p>The world is your oyster.</p>
   <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
+    If you get lost, the <a href="http://ionicframework.com/docs/v2">Ionic docs</a> will be your guide.
+  </p>
+  <p>Web3.js version: {{web3.version.api}}</p>
+  <p>
+    Read the <a href="https://web3js.readthedocs.io">Web3 docs</a>
   </p>
 </ion-content>
