--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -9,7 +9,7 @@
 <ion-content padding>
   <p>The world is your oyster.</p>
   <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">Ionic docs</a> will be your guide.
+    If you get lost, the <a href="hhttps://ionicframework.com/docs/">Ionic docs</a> will be your guide.
   </p>
   <p>Web3.js version: {{web3.version.api}}</p>
   <p>
