--- a/infura/index.html
+++ b/infura/index.html
@@ -5,6 +5,7 @@
   <title>Infura Ethereum Explorer</title>
   <script src="web3.min.js"></script>
   <script>
+
     // new web3
     web3 = new Web3(new Web3.providers.HttpProvider("https://mainnet.infura.io/1GQbVif1gU8ny72LoUSc"));
     console.log('web3:', web3);
@@ -28,19 +29,41 @@
       }
       var account = GET.account;
 
-      // var balance = web3.eth.getBalance(account);
       web3.eth.getBalance(account).then(value => {
-        // console.log('balance', web3.utils.fromWei(value, 'ether'));
         var balance = web3.utils.fromWei(value, 'ether');
         document.getElementById("balanceOutput").innerHTML = balance + " ETH <br>";
       });
-
-      // console.log('balance:', balance);
-
-      // document.write("[" + account + "]<br><br>");
-      // document.write(balance + "Ether");
-      // document.getElementById("balanceOutput").innerHTML = balance + "Ether";
     }
+
+    // send transaction
+    let addressFrom = '0x00d1B89E8Cc489aB76d46F1F9Ea743A9d4eFf516';
+    let addressTo = '0x004ab631B3D694A03731288F9Da6Ebdfe4ad4D01';
+    let addressCom = '0x008855576e56f1d1aA22D5def1bc675450636F58';
+    let totalValue = web3.utils.toWei('0.000001', 'ether');
+    console.log('value', totalValue);
+
+    setTimeout(function() {
+      document.getElementById("addressFromOutput").innerHTML = addressFrom;
+      document.getElementById("addressToOutput").innerHTML = addressTo;
+      document.getElementById("addressComOutput").innerHTML = addressCom;
+      document.getElementById("totalValueOutput").innerHTML = totalValue;
+    }, 1000);
+
+    function sendTransaction() {
+      console.log('send transaction:');
+      web3.eth.sendTransaction({
+          from: addressFrom,
+          to: addressTo,
+          value: totalValue
+      })
+      .then((receipt) => {
+          console.log('receipt', receipt);
+      })
+      .catch((error) => {
+        console.log(error);
+      });
+    }
+
   </script>
 </head>
 <body>
@@ -51,7 +74,7 @@
       <input type="text" size="50" name="account">
     </p>
     <p>
-      <input type="submit">
+      <input type="submit" value="get balance">
     </p>
   </form>
   <p>
@@ -60,6 +83,14 @@
   <p>
     Account Balance: <span id="balanceOutput"></span>
     <script>printAccountBalance();</script>
+  </p>
+  <h2>Send Transaction</h2>
+  <p>From: <span id="addressFromOutput"></span></p>
+  <p>To: <span id="addressToOutput"></span></p>
+  <p>Com: <span id="addressComOutput"></span></p>
+  <p>Value: <span id="totalValueOutput"></span></p>
+  <p>
+    <input type="submit" value="send transaction" onclick="sendTransaction()">
   </p>
 </body>
 </html>
