--- a/infura/index.html
+++ b/infura/index.html
@@ -64,6 +64,12 @@
       });
     }
 
+    // create wallet
+    web3.eth.accounts.wallet.create(2, '23456321§3456764321§345674321§3123457544±-±§±-±!!!43531234534534');
+    console.log('wallet: ', web3.eth.accounts.wallet);
+    console.log('accounts: ', web3.eth.accounts);
+
+
   </script>
 </head>
 <body>
